apps/oxlint/src/snapshots/fixtures__cli__no_cycle_multi_section_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/no_cycle_multi_section
----------

  x import(no-cycle): Dependency cycle detected
   ,-[astro-helper.ts:1:23]
 1 | import { value } from "./page.astro";
   :                       ^^^^^^^^^^^^^^
 2 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ ./page.astro (fixtures/cli/no_cycle_multi_section/page.astro)
           │         ⬇ imports
           │    ./astro-helper (fixtures/cli/no_cycle_multi_section/astro-helper.ts)
           ╰─────────╯ imports the current file

  x import(no-cycle): Dependency cycle detected
   ,-[component.svelte:3:30]
 2 | <script lang="ts">
 3 | import { svelteHelper } from "./svelte-helper";
   :                              ^^^^^^^^^^^^^^^^^
 4 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ ./svelte-helper (fixtures/cli/no_cycle_multi_section/svelte-helper.ts)
           │         ⬇ imports
           │    ./component.svelte (fixtures/cli/no_cycle_multi_section/component.svelte)
           ╰─────────╯ imports the current file

  x import(no-cycle): Dependency cycle detected
   ,-[page.astro:2:29]
 1 | ---
 2 | import { astroHelper } from "./astro-helper";
   :                             ^^^^^^^^^^^^^^^^
 3 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ ./astro-helper (fixtures/cli/no_cycle_multi_section/astro-helper.ts)
           │         ⬇ imports
           │    ./page.astro (fixtures/cli/no_cycle_multi_section/page.astro)
           ╰─────────╯ imports the current file

  x import(no-cycle): Dependency cycle detected
   ,-[svelte-helper.ts:1:23]
 1 | import { value } from "./component.svelte";
   :                       ^^^^^^^^^^^^^^^^^^^^
 2 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ ./component.svelte (fixtures/cli/no_cycle_multi_section/component.svelte)
           │         ⬇ imports
           │    ./svelte-helper (fixtures/cli/no_cycle_multi_section/svelte-helper.ts)
           ╰─────────╯ imports the current file

  x import(no-cycle): Dependency cycle detected
   ,-[widget.vue:2:24]
 1 | <script lang="ts">
 2 | import { helper } from "./helper";
   :                        ^^^^^^^^^^
 3 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ ./helper (fixtures/cli/no_cycle_multi_section/helper.ts)
           │         ⬇ imports
           │    ./widget.vue (fixtures/cli/no_cycle_multi_section/widget.vue)
           ╰─────────╯ imports the current file

Found 0 warnings and 5 errors.
Finished in <variable>ms on 6 files with 60 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
