apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=agent --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=agent --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
disable-directive.js:9:29: warning: Unused eslint-disable directive (no problems were reported from no-debugger).
disable-directive.js:12:29: warning: Unused oxlint-disable directive (no problems were reported from no-debugger).
disable-directive.js:15:29: warning: Unused oxlint-disable directive (no problems were reported from eslint/no-debugger).
----------
CLI result: LintSucceeded
----------
