apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=agent ok.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=agent ok.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
----------
CLI result: LintSucceeded
----------
